--- a/inst/szablony_raportow/adm_tech_1rokpo.Rmd
+++ b/inst/szablony_raportow/adm_tech_1rokpo.Rmd
@@ -528,7 +528,7 @@ if (min(szkoly_month$n) >= progLiczebnosci) {
 ```{r}
 if (szk$E2_nauka_kontyn[[1]]$n >= progLiczebnosci) {
   kontyn <- as_tibble(szk$E2_nauka_kontyn[[1]]) %>% 
-    select(-c(n, brak)) %>% 
+    select(-c(n, `Brak kontynuacji nauki`)) %>% 
     pivot_longer(everything()) %>% 
     mutate(nazwa = case_when(
       name %in% "Branżowa szkoła II stopnia" ~ paste0("* w branżowych szkołach II stopnia (", round(value[name == "Branżowa szkoła II stopnia"] * 100), "%)"),
@@ -577,7 +577,7 @@ if (szk$E2_nauka_kontyn[[1]]$n >= progLiczebnosci) {
         sep = ""
       )
     }
-    if (round(szk$E2_nauka_kontyn[[1]]$brak * 100) == 50) {
+    if (round(szk$E2_nauka_kontyn[[1]]$`Brak kontynuacji nauki` * 100) == 50) {
       cat(
         "\n\nWśród absolwentów Państwa szkoły z rocznika ",
         rocznik,
@@ -603,10 +603,10 @@ if (szk$E2_nauka_kontyn[[1]]$n >= progLiczebnosci) {
 ```{r, fig.height=3}
 if (szk$E2_nauka_kontyn[[1]]$n >= progLiczebnosci) {
   nazwy_wierszy <- c(
-    "Branżowa szkoła II stopnia", # tej etykiety nie będzie bo nie biorę tej kolumny
-    "Liceum dla dorosłych", # tej etykiety nie będzie bo nie biorę tej kolumny
+    "Studia",
     "Szkoła policealna",
-    "Szkoła wyższa",
+    "Liceum dla dorosłych",
+    "Branżowa szkoła II stopnia",
     "Kwalifikacyjny Kurs Zawodowy",
     "Kurs Umiejętności Zawodowych",
     "Nie kontynuują kształcenia")
@@ -648,36 +648,36 @@ if (szk$E2_nauka_kontyn[[1]]$n >= progLiczebnosci) {
 ## Kontynuowanie nauki na studiach w poszczególnych dziedzinach i dyscyplinach
 
 ```{r}
-if (any(!is.na(szk$liczebnosc_dziedziny[[1]]$odsetek))) {
-  if (round(szk$E2_nauka_kontyn[[1]]$studia * szk$E2_nauka_kontyn[[1]]$n) >= progLiczebnosci) {
-    if (sum(szk$liczebnosc_dziedziny[[1]]$odsetek > 0) %in% 1) {
+if (szk$liczebnosc_dziedziny[[1]]$n >= progLiczebnosci) {
+  if (round(szk$E2_nauka_kontyn[[1]]$Studia * szk$E2_nauka_kontyn[[1]]$n) >= progLiczebnosci) {
+    if (sum(szk$liczebnosc_dziedziny[[1]]$pct > 0) %in% 1) {
       cat(
         "Jedyną dziedziną, w której w grudniu ",
         params$rok,
         " roku studiowali absolwenci Państwa szkoły, była dziedzina ",
-        szk$liczebnosc_dziedziny[[1]]$dziedzina_kont[szk$liczebnosc_dziedziny[[1]]$odsetek > 0],
+        szk$liczebnosc_dziedziny[[1]]$kont[szk$liczebnosc_dziedziny[[1]]$pct > 0],
         sep = ""
       )
-    } else if (sum(szk$liczebnosc_dziedziny[[1]]$odsetek > 0) > 1 & sum(szk$liczebnosc_dziedziny[[1]]$odsetek %in% max(szk$liczebnosc_dziedziny[[1]]$odsetek)) %in% 1) {
+    } else if (sum(szk$liczebnosc_dziedziny[[1]]$pct > 0) > 1 & sum(szk$liczebnosc_dziedziny[[1]]$pct %in% max(szk$liczebnosc_dziedziny[[1]]$pct)) %in% 1) {
       cat(
         "Dziedziną, w której w grudniu ",
         params$rok,
         " roku studiowało najwięcej absolwentów Państwa szkoły, była dziedzina ",
-        szk$liczebnosc_dziedziny[[1]]$dziedzina_kont[szk$liczebnosc_dziedziny[[1]]$odsetek %in% max(szk$liczebnosc_dziedziny[[1]]$odsetek)],
+        szk$liczebnosc_dziedziny[[1]]$kont[szk$liczebnosc_dziedziny[[1]]$pct %in% max(szk$liczebnosc_dziedziny[[1]]$pct)],
         ". Kształciło się w niej ",
-        round(max(szk$liczebnosc_dziedziny[[1]]$odsetek) * 100),
+        round(max(szk$liczebnosc_dziedziny[[1]]$pct) * 100),
         "% spośród absolwentów, którzy w grudniu ",
         params$rok,
         " roku studiowali.",
         sep = ""
       )
-    } else if (sum(szk$liczebnosc_dziedziny[[1]]$odsetek > 0) > 1 & sum(szk$liczebnosc_dziedziny[[1]]$odsetek %in% max(szk$liczebnosc_dziedziny[[1]]$odsetek)) > 1) {
+    } else if (sum(szk$liczebnosc_dziedziny[[1]]$pct > 0) > 1 & sum(szk$liczebnosc_dziedziny[[1]]$pct %in% max(szk$liczebnosc_dziedziny[[1]]$pct)) > 1) {
       cat(
         "Dziedzinami, w których w grudniu ",
         params$rok,
         " roku absolwenci Państwa szkoły najczęściej studiowali, były: ",
         paste(
-          szk$liczebnosc_dziedziny[[1]]$dziedzina_kont[szk$liczebnosc_dziedziny[[1]]$odsetek %in% max(szk$liczebnosc_dziedziny[[1]]$odsetek)],
+          szk$liczebnosc_dziedziny[[1]]$kont[szk$liczebnosc_dziedziny[[1]]$pct %in% max(szk$liczebnosc_dziedziny[[1]]$pct)],
           collapse = ", "),
         ".",
         sep = ""
@@ -700,8 +700,8 @@ if (any(!is.na(szk$liczebnosc_dziedziny[[1]]$odsetek))) {
 ```
 
 ```{r}
-if (any(!is.na(szk$liczebnosc_dziedziny[[1]]$odsetek))) {
-  if (round(szk$E2_nauka_kontyn[[1]]$studia * szk$E2_nauka_kontyn[[1]]$n) >= progLiczebnosci) {
+if (szk$liczebnosc_dziedziny[[1]]$n >= progLiczebnosci) {
+  if (round(szk$E2_nauka_kontyn[[1]]$Studia * szk$E2_nauka_kontyn[[1]]$n) >= progLiczebnosci) {
     cat("Tabela ",
         tab_num(),
         ": Dziedziny, w których absolwenci Państwa szkoły najczęściej studiowali w grudniu ",
@@ -712,8 +712,8 @@ if (any(!is.na(szk$liczebnosc_dziedziny[[1]]$odsetek))) {
     tabelka <- szk$liczebnosc_dziedziny[[1]] %>% 
       as_tibble() %>% 
       select(-n) %>% 
-      slice_max(order_by = odsetek, n = 10, with_ties = FALSE) %>% 
-      mutate(across(odsetek,
+      slice_max(order_by = pct, n = 10, with_ties = FALSE) %>% 
+      mutate(across(pct,
                     ~paste0(round(. * 100), "\\%"))) %>% 
       kable(format = "latex",
             booktabs = TRUE,
@@ -740,36 +740,36 @@ if (any(!is.na(szk$liczebnosc_dziedziny[[1]]$odsetek))) {
 ```
 
 ```{r}
-if (any(!is.na(szk$liczebnosc_dyscypliny[[1]]$odsetek))) {
-  if (round(szk$E2_nauka_kontyn[[1]]$studia * szk$E2_nauka_kontyn[[1]]$n) >= progLiczebnosci) {
-    if (sum(szk$liczebnosc_dyscypliny[[1]]$odsetek > 0) %in% 1) {
+if (szk$liczebnosc_dyscypliny[[1]]$n >= progLiczebnosci) {
+  if (round(szk$E2_nauka_kontyn[[1]]$Studia * szk$E2_nauka_kontyn[[1]]$n) >= progLiczebnosci) {
+    if (sum(szk$liczebnosc_dyscypliny[[1]]$pct > 0) %in% 1) {
       cat(
         "Jedyną dyscypliną, w której w grudniu ",
         params$rok,
         " roku studiowali absolwenci Państwa szkoły, była dyscyplina ",
-        szk$liczebnosc_dyscypliny[[1]]$dyscyplina_wiodaca_kont[szk$liczebnosc_dyscypliny[[1]]$odsetek > 0],
+        szk$liczebnosc_dyscypliny[[1]]$kont[szk$liczebnosc_dyscypliny[[1]]$pct > 0],
         sep = ""
       )
-    } else if (sum(szk$liczebnosc_dyscypliny[[1]]$odsetek > 0) > 1 & sum(szk$liczebnosc_dyscypliny[[1]]$odsetek %in% max(szk$liczebnosc_dyscypliny[[1]]$odsetek)) %in% 1) {
+    } else if (sum(szk$liczebnosc_dyscypliny[[1]]$pct > 0) > 1 & sum(szk$liczebnosc_dyscypliny[[1]]$pct %in% max(szk$liczebnosc_dyscypliny[[1]]$pct)) %in% 1) {
       cat(
         "Dyscypliną, w której w grudniu ",
         params$rok,
         " roku studiowało najwięcej absolwentów Państwa szkoły, była dyscyplina ",
-        szk$liczebnosc_dyscypliny[[1]]$dyscyplina_wiodaca_kont[szk$liczebnosc_dyscypliny[[1]]$odsetek %in% max(szk$liczebnosc_dyscypliny[[1]]$odsetek)],
+        szk$liczebnosc_dyscypliny[[1]]$kont[szk$liczebnosc_dyscypliny[[1]]$pct %in% max(szk$liczebnosc_dyscypliny[[1]]$pct)],
         ". Kształciło się w niej ",
-        round(max(szk$liczebnosc_dyscypliny[[1]]$odsetek) * 100),
+        round(max(szk$liczebnosc_dyscypliny[[1]]$pct) * 100),
         "% spośród absolwentów, którzy w grudniu ",
         params$rok,
         " roku studiowali.",
         sep = ""
       )
-    } else if (sum(szk$liczebnosc_dyscypliny[[1]]$odsetek > 0) > 1 & sum(szk$liczebnosc_dyscypliny[[1]]$odsetek %in% max(szk$liczebnosc_dyscypliny[[1]]$odsetek)) > 1) {
+    } else if (sum(szk$liczebnosc_dyscypliny[[1]]$pct > 0) > 1 & sum(szk$liczebnosc_dyscypliny[[1]]$pct %in% max(szk$liczebnosc_dyscypliny[[1]]$pct)) > 1) {
       cat(
         "Dyscyplinami, w których w grudniu ",
         params$rok,
         " roku absolwenci Państwa szkoły najczęściej studiowali, były: ",
         paste(
-          szk$liczebnosc_dyscypliny[[1]]$dyscyplina_wiodaca_kont[szk$liczebnosc_dyscypliny[[1]]$odsetek %in% max(szk$liczebnosc_dyscypliny[[1]]$odsetek)],
+          szk$liczebnosc_dyscypliny[[1]]$kont[szk$liczebnosc_dyscypliny[[1]]$pct %in% max(szk$liczebnosc_dyscypliny[[1]]$pct)],
           collapse = ", "),
         ".",
         sep = ""
@@ -780,8 +780,8 @@ if (any(!is.na(szk$liczebnosc_dyscypliny[[1]]$odsetek))) {
 ```
 
 ```{r}
-if (any(!is.na(szk$liczebnosc_dyscypliny[[1]]$odsetek))) {
-  if (round(szk$E2_nauka_kontyn[[1]]$studia * szk$E2_nauka_kontyn[[1]]$n) >= progLiczebnosci) {
+if (szk$liczebnosc_dyscypliny[[1]]$n >= progLiczebnosci) {
+  if (round(szk$E2_nauka_kontyn[[1]]$Studia * szk$E2_nauka_kontyn[[1]]$n) >= progLiczebnosci) {
     cat("Tabela ",
         tab_num(),
         ": Dyscypliny, w których absolwenci Państwa szkoły najczęściej studiowali w grudniu ",
@@ -792,8 +792,8 @@ if (any(!is.na(szk$liczebnosc_dyscypliny[[1]]$odsetek))) {
     tabelka <- szk$liczebnosc_dyscypliny[[1]] %>% 
       as_tibble() %>% 
       select(-n) %>% 
-      slice_max(order_by = odsetek, n = 10, with_ties = FALSE) %>%
-      mutate(across(odsetek,
+      slice_max(order_by = pct, n = 10, with_ties = FALSE) %>%
+      mutate(across(pct,
                     ~paste0(round(. * 100), "\\%"))) %>% 
       kable(format = "latex",
             booktabs = TRUE,
@@ -822,8 +822,8 @@ if (any(!is.na(szk$liczebnosc_dyscypliny[[1]]$odsetek))) {
 ## Kontynuowanie nauki na studiach w poszczególnych dyscyplinach w podziale na płeć
 
 ```{r}
-if (round(szk$E2_nauka_kontyn[[1]]$studia * szk$E2_nauka_kontyn[[1]]$n) >= progLiczebnosci) {
-  if (any(!is.na(szk$dyscypliny_kob[[1]]$odsetek))) {
+if (round(szk$E2_nauka_kontyn[[1]]$Studia * szk$E2_nauka_kontyn[[1]]$n) >= progLiczebnosci) {
+  if (any(!is.na(szk$dyscypliny_kob[[1]]$pct))) {
     cat(
       "Poniższa tabela prezentuje rozkład dyscyplin, w których kontynuowały naukę absolwentki Państwa szkoły.\n\nTabela ",
       tab_num(),
@@ -835,8 +835,8 @@ if (round(szk$E2_nauka_kontyn[[1]]$studia * szk$E2_nauka_kontyn[[1]]$n) >= progL
     tabelka <- szk$dyscypliny_kob[[1]] %>% 
       as_tibble() %>% 
       select(-n) %>% 
-      slice_max(order_by = odsetek, n = 10, with_ties = FALSE) %>%
-      mutate(across(odsetek,
+      slice_max(order_by = pct, n = 10, with_ties = FALSE) %>%
+      mutate(across(pct,
                     ~paste0(round(. * 100), "\\%"))) %>% 
       kable(format = "latex",
             booktabs = TRUE,
@@ -869,8 +869,8 @@ if (round(szk$E2_nauka_kontyn[[1]]$studia * szk$E2_nauka_kontyn[[1]]$n) >= progL
 ```
 
 ```{r}
-if (round(szk$E2_nauka_kontyn[[1]]$studia * szk$E2_nauka_kontyn[[1]]$n) >= progLiczebnosci) {
-  if (any(!is.na(szk$dyscypliny_mez[[1]]$odsetek))) {
+if (round(szk$E2_nauka_kontyn[[1]]$Studia * szk$E2_nauka_kontyn[[1]]$n) >= progLiczebnosci) {
+  if (any(!is.na(szk$dyscypliny_mez[[1]]$pct))) {
     cat(
       "Poniższa tabela prezentuje rozkład dyscyplin, w których kontynuowali naukę absolwenci Państwa szkoły.\n\nTabela ",
       tab_num(),
@@ -882,8 +882,8 @@ if (round(szk$E2_nauka_kontyn[[1]]$studia * szk$E2_nauka_kontyn[[1]]$n) >= progL
     tabelka <- szk$dyscypliny_mez[[1]] %>% 
       as_tibble() %>% 
       select(-n) %>% 
-      slice_max(order_by = odsetek, n = 10, with_ties = FALSE) %>%
-      mutate(across(odsetek,
+      slice_max(order_by = pct, n = 10, with_ties = FALSE) %>%
+      mutate(across(pct,
                     ~paste0(round(. * 100), "\\%"))) %>% 
       kable(format = "latex",
             booktabs = TRUE,
@@ -918,23 +918,23 @@ if (round(szk$E2_nauka_kontyn[[1]]$studia * szk$E2_nauka_kontyn[[1]]$n) >= progL
 ## Kontynuowanie nauki na studiach w poszczególnych dyscyplinach w podziale na wyuczony zawód
 
 ```{r}
-if (round(szk$E2_nauka_kontyn[[1]]$studia * szk$E2_nauka_kontyn[[1]]$n) >= progLiczebnosci) {
-  l_col <- length(szk$dyscypliny_zawody[[1]]) - 1
+if (round(szk$E2_nauka_kontyn[[1]]$Studia * szk$E2_nauka_kontyn[[1]]$n) >= progLiczebnosci) {
+ l_col <- length(szk$dyscypliny_zawody[[1]])
   if (length(szk$dyscypliny_zawody[[1]]) > 1 & l_col > 0) {
     cat(
       "W poniższej tabeli przedstawione zostały informacje o dyscyplinach, w których studiowali absolwenci Państwa szkoły, należący do poszczególnych grup (liczących co najmniej 10 osób) wyróżnionych ze względu na zawód, w którym się kształcili.")
     
     naz_wiersze_nag <- character()
-    for (i in 1:l_col) {
+    for (i in 3:(l_col)) {
       naz_wiersze_nag <- paste(
-        c(naz_wiersze_nag, paste(i, "-", names(szk$dyscypliny_zawody[[1]])[i + 1])),
+        c(naz_wiersze_nag, paste(i - 2, "-", names(szk$dyscypliny_zawody[[1]])[i])),
         collapse = "\n")
     }
-    wiersze_nag <- l_col
+    wiersze_nag <- l_col - 2
     names(wiersze_nag) <- paste0("% wśród studiujących absolwentów Państwa\nszkoły, którzy kształcili się w niej w zawodzie:\n", naz_wiersze_nag)
     
-    nagl <- rep(1, l_col, by = 1)
-    names(nagl) <- lapply(1:l_col, as.character)
+    nagl <- rep(1, l_col - 2, by = 1)
+    names(nagl) <- lapply(paste0(1:(l_col - 2), "."), as.character)
     
     cat("\n\nTabela ",
         tab_num(),
@@ -944,14 +944,14 @@ if (round(szk$E2_nauka_kontyn[[1]]$studia * szk$E2_nauka_kontyn[[1]]$n) >= progL
         sep = "")
     
     # tu nie ma ograniczenia na max 10 dyscyplin, natomiast jest ograniczenie na liczbę zawodów
-    tab <- szk$dyscypliny_zawody[[1]] %>% 
+    tab <- szk$dyscypliny_zawody[[1]][-1] %>% 
       as_tibble() %>% 
       mutate(across(2:ncol(.),
                     ~paste0(round(. * 100), "\\%")))
     
     
-    tab$dyscyplina_wiodaca_kont <- unname(sapply(tab$dyscyplina_wiodaca_kont, wrapper, width = 50))
-    tab$dyscyplina_wiodaca_kont <- linebreak(tab$dyscyplina_wiodaca_kont, align = "l")
+    tab$kont <- unname(sapply(tab$kont, wrapper, width = 50))
+    tab$kont <- linebreak(tab$kont, align = "l")
     
     tab <- tab %>% 
       kable(format = "latex",
@@ -1607,7 +1607,7 @@ if (szk$l_abs[[1]] >= progLiczebnosci) {
             "mies",
             "Liczba miesięcy bezrobocia") +
     geom_text(data = tab_wyk,
-              aes(x = mies, y = value, label = lab, group = typ),
+              aes(x = mies, y = pct, label = lab, group = typ),
               nudge_y = 0.03,
               size = 2.5)
   
@@ -1615,7 +1615,7 @@ if (szk$l_abs[[1]] >= progLiczebnosci) {
   
   tab_wyk <- tab_wyk %>%
     select(-lab) %>% 
-    pivot_wider(names_from = mies) %>%
+    pivot_wider(names_from = mies, values_from = pct) %>%
     mutate(across(2:6,
                   ~ round(. * 100))) %>%
     mutate(across(2:6,
@@ -1656,7 +1656,7 @@ god2 <- god2 %>%
   filter(typ_szk %in% szk$typ_szk[[1]])
 
 woj <- woj %>% 
-  filter(teryt_woj %in% szk$teryt_woj[[1]],
+  filter(teryt_woj_szk %in% szk$teryt_woj_szk[[1]],
          typ_szk %in% szk$typ_szk[[1]])
 ```
 
@@ -1771,10 +1771,12 @@ if (nrow(tabela) > 0) {
 
 ```{r}
 if (woj$l_abs[[1]] < progLiczebnosci | woj$E2_nauka_kontyn[[1]]$n < progLiczebnosci) {
-  tabelka_bez_brak <- god2$E2_nauka_kontyn[[1]][-1] %>% 
+  tabelka_bez_brak <- god2$E2_nauka_kontyn[[1]][-1]
+  tabelka_bez_brak["Brak kontynuacji nauki"] <- NULL
+  
+  tabelka_bez_brak <- tabelka_bez_brak %>% 
     as_tibble() %>% 
     pivot_longer(everything()) %>% 
-    filter(!name %in% "brak") %>% 
     arrange(desc(value))
   
   tabelka <- rbind(
@@ -1782,16 +1784,16 @@ if (woj$l_abs[[1]] < progLiczebnosci | woj$E2_nauka_kontyn[[1]]$n < progLiczebno
     god2$E2_nauka_kontyn[[1]][-1] %>% 
       as_tibble() %>% 
       pivot_longer(everything()) %>% 
-      filter(name %in% "brak"))
+      filter(name %in% "Brak kontynuacji nauki"))
   
   tabelka$name <- factor(tabelka$name,
-                        levels = c("studia",
-                                   "spolic",
-                                   "kkz",
-                                   "lodd",
-                                   "bs2",
-                                   "kuz",
-                                   "brak"),
+                        levels = c("Studia",
+                                   "Szkoła policealna",
+                                   "KKZ",
+                                   "Liceum dla dorosłych",
+                                   "Branżowa szkoła II stopnia",
+                                   "KUZ",
+                                   "Brak kontynuacji nauki"),
                         labels = c("Studia",
                                    "Szkoła policealna",
                                    "Kwalifikacyjny Kurs Zawodowy (KKZ)",
@@ -1823,11 +1825,12 @@ if (woj$l_abs[[1]] < progLiczebnosci | woj$E2_nauka_kontyn[[1]]$n < progLiczebno
       woj$odmiany[[1]]$nazwa,
       "\n\n",
       sep = "")
-  
-  tabelka_bez_brak <- woj$E2_nauka_kontyn[[1]][-1] %>% 
+  tabelka_bez_brak <- woj$E2_nauka_kontyn[[1]][-1]
+  tabelka_bez_brak["Brak kontynuacji nauki"] <- NULL
+
+  tabelka_bez_brak <- tabelka_bez_brak %>% 
     as_tibble() %>% 
     pivot_longer(everything()) %>% 
-    filter(!name %in% "brak") %>% 
     arrange(desc(value))
   
   tabelka <- rbind(
@@ -1835,16 +1838,16 @@ if (woj$l_abs[[1]] < progLiczebnosci | woj$E2_nauka_kontyn[[1]]$n < progLiczebno
     woj$E2_nauka_kontyn[[1]][-1] %>% 
       as_tibble() %>% 
       pivot_longer(everything()) %>% 
-      filter(name %in% "brak"))
+      filter(name %in% "Brak kontynuacji nauki"))
   
   tabelka$name <- factor(tabelka$name,
-                        levels = c("studia",
-                                   "spolic",
-                                   "kkz",
-                                   "lodd",
-                                   "bs2",
-                                   "kuz",
-                                   "brak"),
+                        levels = c("Studia",
+                                   "Szkoła policealna",
+                                   "KKZ",
+                                   "Liceum dla dorosłych",
+                                   "Branżowa szkoła II stopnia",
+                                   "KUZ",
+                                   "Brak kontynuacji nauki"),
                         labels = c("Studia",
                                    "Szkoła policealna",
                                    "Kwalifikacyjny Kurs Zawodowy (KKZ)",
@@ -1876,10 +1879,12 @@ if (woj$l_abs[[1]] < progLiczebnosci | woj$E2_nauka_kontyn[[1]]$n < progLiczebno
       "  b) cały kraj\n\n",
       sep = "")
   
-  tabelka_bez_brak <- god2$E2_nauka_kontyn[[1]][-1] %>% 
+  tabelka_bez_brak <- god2$E2_nauka_kontyn[[1]][-1]
+  tabelka_bez_brak["Brak kontynuacji nauki"] <- NULL
+
+  tabelka_bez_brak <- tabelka_bez_brak %>% 
     as_tibble() %>% 
     pivot_longer(everything()) %>% 
-    filter(!name %in% "brak") %>% 
     arrange(desc(value))
   
   tabelka <- rbind(
@@ -1887,16 +1892,16 @@ if (woj$l_abs[[1]] < progLiczebnosci | woj$E2_nauka_kontyn[[1]]$n < progLiczebno
     god2$E2_nauka_kontyn[[1]][-1] %>% 
       as_tibble() %>% 
       pivot_longer(everything()) %>% 
-      filter(name %in% "brak"))
+      filter(name %in% "Brak kontynuacji nauki"))
   
   tabelka$name <- factor(tabelka$name,
-                        levels = c("studia",
-                                   "spolic",
-                                   "kkz",
-                                   "lodd",
-                                   "bs2",
-                                   "kuz",
-                                   "brak"),
+                        levels = c("Studia",
+                                   "Szkoła policealna",
+                                   "KKZ",
+                                   "Liceum dla dorosłych",
+                                   "Branżowa szkoła II stopnia",
+                                   "KUZ",
+                                   "Brak kontynuacji nauki"),
                         labels = c("Studia",
                                    "Szkoła policealna",
                                    "Kwalifikacyjny Kurs Zawodowy (KKZ)",
@@ -2181,8 +2186,8 @@ if (woj$l_abs[[1]] < progLiczebnosci | sum(woj$B2_bezrob[[1]]$n) < progLiczebnos
   
   tabelka <- god2$B2_bezrob[[1]] %>% 
     as_tibble() %>% 
-    select(l_mies_bezrob, value) %>% 
-    mutate(across(value,
+    select(bezrobocie_r0_wrzgru, pct) %>% 
+    mutate(across(pct,
                   ~paste0(round(. * 100), "\\%"))) %>% 
     kable("latex", booktabs = TRUE, escape = FALSE, longtable = TRUE,
           linesep = "",
@@ -2209,8 +2214,8 @@ if (woj$l_abs[[1]] < progLiczebnosci | sum(woj$B2_bezrob[[1]]$n) < progLiczebnos
   
   tabelka <- woj$B2_bezrob[[1]] %>% 
     as_tibble() %>% 
-    select(l_mies_bezrob, value) %>% 
-    mutate(across(value,
+    select(bezrobocie_r0_wrzgru, pct) %>% 
+    mutate(across(pct,
                   ~paste0(round(. * 100), "\\%"))) %>% 
     kable("latex", booktabs = TRUE, escape = FALSE, longtable = TRUE,
           linesep = "",
@@ -2232,8 +2237,8 @@ if (woj$l_abs[[1]] < progLiczebnosci | sum(woj$B2_bezrob[[1]]$n) < progLiczebnos
   
   tabelka <- god2$B2_bezrob[[1]] %>% 
     as_tibble() %>% 
-    select(l_mies_bezrob, value) %>% 
-    mutate(across(value,
+    select(bezrobocie_r0_wrzgru, pct) %>% 
+    mutate(across(pct,
                   ~paste0(round(. * 100), "\\%"))) %>% 
     kable("latex", booktabs = TRUE, escape = FALSE, longtable = TRUE,
           linesep = "",
