--- a/inst/szablony_raportow/adm_spolic_1rokpo.Rmd
+++ b/inst/szablony_raportow/adm_spolic_1rokpo.Rmd
@@ -577,7 +577,7 @@ if (szk$E2_nauka_kontyn[[1]]$n >= progLiczebnosci) {
         sep = ""
       )
     }
-    if (round(szk$E2_nauka_kontyn[[1]]$brak * 100) == 50) {
+    if (round(szk$E2_nauka_kontyn[[1]]$`Brak kontynuacji nauki` * 100) == 50) {
       cat(
         "\n\nWśród absolwentów Państwa szkoły z rocznika ",
         rocznik,
@@ -603,10 +603,10 @@ if (szk$E2_nauka_kontyn[[1]]$n >= progLiczebnosci) {
 ```{r, fig.height=3}
 if (szk$E2_nauka_kontyn[[1]]$n >= progLiczebnosci) {
   nazwy_wierszy <- c(
-    "Branżowa szkoła II stopnia", # tej etykiety nie będzie bo nie biorę tej kolumny
-    "Liceum dla dorosłych", # tej etykiety nie będzie bo nie biorę tej kolumny
+    "Studia",
     "Szkoła policealna",
-    "Szkoła wyższa",
+    "Liceum dla dorosłych",
+    "Branżowa szkoła II stopnia",
     "Kwalifikacyjny Kurs Zawodowy",
     "Kurs Umiejętności Zawodowych",
     "Nie kontynuują kształcenia")
@@ -648,36 +648,36 @@ if (szk$E2_nauka_kontyn[[1]]$n >= progLiczebnosci) {
 ## Kontynuowanie nauki na studiach w poszczególnych dziedzinach i dyscyplinach
 
 ```{r}
-if (any(!is.na(szk$liczebnosc_dziedziny[[1]]$odsetek))) {
-  if (round(szk$E2_nauka_kontyn[[1]]$studia * szk$E2_nauka_kontyn[[1]]$n) >= progLiczebnosci) {
-    if (sum(szk$liczebnosc_dziedziny[[1]]$odsetek > 0, na.rm = TRUE) == 1) {
+if (szk$liczebnosc_dziedziny[[1]]$n >= progLiczebnosci) {
+  if (round(szk$E2_nauka_kontyn[[1]]$Studia * szk$E2_nauka_kontyn[[1]]$n) >= progLiczebnosci) {
+    if (sum(szk$liczebnosc_dziedziny[[1]]$pct > 0) == 1) {
       cat(
         "Jedyną dziedziną, w której w grudniu ",
         params$rok,
         " roku studiowali absolwenci Państwa szkoły, była dziedzina ",
-        szk$liczebnosc_dziedziny[[1]]$dziedzina_kont[szk$liczebnosc_dziedziny[[1]]$odsetek > 0],
+        szk$liczebnosc_dziedziny[[1]]$kont[szk$liczebnosc_dziedziny[[1]]$pct > 0],
         sep = ""
       )
-    } else if (sum(szk$liczebnosc_dziedziny[[1]]$odsetek > 0, na.rm = TRUE) > 1 & sum(szk$liczebnosc_dziedziny[[1]]$odsetek %in% max(szk$liczebnosc_dziedziny[[1]]$odsetek)) == 1) {
+    } else if (sum(szk$liczebnosc_dziedziny[[1]]$pct > 0) > 1 & sum(szk$liczebnosc_dziedziny[[1]]$pct %in% max(szk$liczebnosc_dziedziny[[1]]$pct)) == 1) {
       cat(
         "Dziedziną, w której w grudniu ",
         params$rok,
         " roku studiowało najwięcej absolwentów Państwa szkoły, była dziedzina ",
-        szk$liczebnosc_dziedziny[[1]]$dziedzina_kont[szk$liczebnosc_dziedziny[[1]]$odsetek %in% max(szk$liczebnosc_dziedziny[[1]]$odsetek)],
+        szk$liczebnosc_dziedziny[[1]]$kont[szk$liczebnosc_dziedziny[[1]]$pct %in% max(szk$liczebnosc_dziedziny[[1]]$pct)],
         ". Kształciło się w niej ",
-        round(max(szk$liczebnosc_dziedziny[[1]]$odsetek) * 100),
+        round(max(szk$liczebnosc_dziedziny[[1]]$pct) * 100),
         "% spośród absolwentów, którzy w grudniu ",
         params$rok,
         " roku studiowali.",
         sep = ""
       )
-    } else if (sum(szk$liczebnosc_dziedziny[[1]]$odsetek > 0, na.rm = TRUE) > 1 & sum(szk$liczebnosc_dziedziny[[1]]$odsetek %in% max(szk$liczebnosc_dziedziny[[1]]$odsetek)) > 1) {
+    } else if (sum(szk$liczebnosc_dziedziny[[1]]$pct > 0) > 1 & sum(szk$liczebnosc_dziedziny[[1]]$pct %in% max(szk$liczebnosc_dziedziny[[1]]$pct)) > 1) {
       cat(
         "Dziedzinami, w których w grudniu ",
         params$rok,
         " roku absolwenci Państwa szkoły najczęściej studiowali, były: ",
         paste(
-          szk$liczebnosc_dziedziny[[1]]$dziedzina_kont[szk$liczebnosc_dziedziny[[1]]$odsetek %in% max(szk$liczebnosc_dziedziny[[1]]$odsetek)],
+          szk$liczebnosc_dziedziny[[1]]$kont[szk$liczebnosc_dziedziny[[1]]$pct %in% max(szk$liczebnosc_dziedziny[[1]]$pct)],
           collapse = ", "),
         ".",
         sep = ""
@@ -700,8 +700,8 @@ if (any(!is.na(szk$liczebnosc_dziedziny[[1]]$odsetek))) {
 ```
 
 ```{r}
-if (any(!is.na(szk$liczebnosc_dziedziny[[1]]$odsetek))) {
-  if (round(szk$E2_nauka_kontyn[[1]]$studia * szk$E2_nauka_kontyn[[1]]$n) >= progLiczebnosci) {
+if (szk$liczebnosc_dziedziny[[1]]$n >= progLiczebnosci) {
+  if (round(szk$E2_nauka_kontyn[[1]]$Studia * szk$E2_nauka_kontyn[[1]]$n) >= progLiczebnosci) {
     cat("Tabela ",
         tab_num(),
         ": Dziedziny, w których absolwenci Państwa szkoły najczęściej studiowali w grudniu ",
@@ -712,8 +712,8 @@ if (any(!is.na(szk$liczebnosc_dziedziny[[1]]$odsetek))) {
     tabelka <- szk$liczebnosc_dziedziny[[1]] %>% 
       as_tibble() %>% 
       select(-n) %>% 
-      slice_max(order_by = odsetek, n = 10, with_ties = FALSE) %>% 
-      mutate(across(odsetek,
+      slice_max(order_by = pct, n = 10, with_ties = FALSE) %>% 
+      mutate(across(pct,
                     ~paste0(round(. * 100), "\\%"))) %>% 
       kable(format = "latex",
             booktabs = TRUE,
@@ -740,36 +740,36 @@ if (any(!is.na(szk$liczebnosc_dziedziny[[1]]$odsetek))) {
 ```
 
 ```{r}
-if (any(!is.na(szk$liczebnosc_dyscypliny[[1]]$odsetek))) {
-  if (round(szk$E2_nauka_kontyn[[1]]$studia * szk$E2_nauka_kontyn[[1]]$n) >= progLiczebnosci) {
-    if (sum(szk$liczebnosc_dyscypliny[[1]]$odsetek > 0, na.rm = TRUE) == 1) {
+if (szk$liczebnosc_dyscypliny[[1]]$n >= progLiczebnosci) {
+  if (round(szk$E2_nauka_kontyn[[1]]$Studia * szk$E2_nauka_kontyn[[1]]$n) >= progLiczebnosci) {
+    if (sum(szk$liczebnosc_dyscypliny[[1]]$pct > 0) == 1) {
       cat(
         "Jedyną dyscypliną, w której w grudniu ",
         params$rok,
         " roku studiowali absolwenci Państwa szkoły, była dyscyplina ",
-        szk$liczebnosc_dyscypliny[[1]]$dyscyplina_wiodaca_kont[szk$liczebnosc_dyscypliny[[1]]$odsetek > 0],
+        szk$liczebnosc_dyscypliny[[1]]$kont[szk$liczebnosc_dyscypliny[[1]]$pct > 0],
         sep = ""
       )
-    } else if (sum(szk$liczebnosc_dyscypliny[[1]]$odsetek > 0, na.rm = TRUE) > 1 & sum(szk$liczebnosc_dyscypliny[[1]]$odsetek %in% max(szk$liczebnosc_dyscypliny[[1]]$odsetek)) == 1) {
+    } else if (sum(szk$liczebnosc_dyscypliny[[1]]$pct > 0) > 1 & sum(szk$liczebnosc_dyscypliny[[1]]$pct %in% max(szk$liczebnosc_dyscypliny[[1]]$pct)) == 1) {
       cat(
         "Dyscypliną, w której w grudniu ",
         params$rok,
         " roku studiowało najwięcej absolwentów Państwa szkoły, była dyscyplina ",
-        szk$liczebnosc_dyscypliny[[1]]$dyscyplina_wiodaca_kont[szk$liczebnosc_dyscypliny[[1]]$odsetek %in% max(szk$liczebnosc_dyscypliny[[1]]$odsetek)],
+        szk$liczebnosc_dyscypliny[[1]]$kont[szk$liczebnosc_dyscypliny[[1]]$pct %in% max(szk$liczebnosc_dyscypliny[[1]]$pct)],
         ". Kształciło się w niej ",
-        round(max(szk$liczebnosc_dyscypliny[[1]]$odsetek) * 100),
+        round(max(szk$liczebnosc_dyscypliny[[1]]$pct) * 100),
         "% spośród absolwentów, którzy w grudniu ",
         params$rok,
         " roku studiowali.",
         sep = ""
       )
-    } else if (sum(szk$liczebnosc_dyscypliny[[1]]$odsetek > 0, na.rm = TRUE) > 1 & sum(szk$liczebnosc_dyscypliny[[1]]$odsetek %in% max(szk$liczebnosc_dyscypliny[[1]]$odsetek)) > 1) {
+    } else if (sum(szk$liczebnosc_dyscypliny[[1]]$pct > 0) > 1 & sum(szk$liczebnosc_dyscypliny[[1]]$pct %in% max(szk$liczebnosc_dyscypliny[[1]]$pct)) > 1) {
       cat(
         "Dyscyplinami, w których w grudniu ",
         params$rok,
         " roku absolwenci Państwa szkoły najczęściej studiowali, były: ",
         paste(
-          szk$liczebnosc_dyscypliny[[1]]$dyscyplina_wiodaca_kont[szk$liczebnosc_dyscypliny[[1]]$odsetek %in% max(szk$liczebnosc_dyscypliny[[1]]$odsetek)],
+          szk$liczebnosc_dyscypliny[[1]]$kont[szk$liczebnosc_dyscypliny[[1]]$pct %in% max(szk$liczebnosc_dyscypliny[[1]]$pct)],
           collapse = ", "),
         ".",
         sep = ""
@@ -780,8 +780,8 @@ if (any(!is.na(szk$liczebnosc_dyscypliny[[1]]$odsetek))) {
 ```
 
 ```{r}
-if (any(!is.na(szk$liczebnosc_dyscypliny[[1]]$odsetek))) {
-  if (round(szk$E2_nauka_kontyn[[1]]$studia * szk$E2_nauka_kontyn[[1]]$n) >= progLiczebnosci) {
+if (szk$liczebnosc_dyscypliny[[1]]$n >= progLiczebnosci) {
+  if (round(szk$E2_nauka_kontyn[[1]]$Studia * szk$E2_nauka_kontyn[[1]]$n) >= progLiczebnosci) {
     cat("Tabela ",
         tab_num(),
         ": Dyscypliny, w których absolwenci Państwa szkoły najczęściej studiowali w grudniu ",
@@ -792,8 +792,8 @@ if (any(!is.na(szk$liczebnosc_dyscypliny[[1]]$odsetek))) {
     tabelka <- szk$liczebnosc_dyscypliny[[1]] %>% 
       as_tibble() %>% 
       select(-n) %>% 
-      slice_max(order_by = odsetek, n = 10, with_ties = FALSE) %>%
-      mutate(across(odsetek,
+      slice_max(order_by = pct, n = 10, with_ties = FALSE) %>%
+      mutate(across(pct,
                     ~paste0(round(. * 100), "\\%"))) %>% 
       kable(format = "latex",
             booktabs = TRUE,
@@ -822,23 +822,23 @@ if (any(!is.na(szk$liczebnosc_dyscypliny[[1]]$odsetek))) {
 ## Kontynuowanie nauki na studiach w poszczególnych dyscyplinach w podziale na wyuczony zawód
 
 ```{r}
-if (round(szk$E2_nauka_kontyn[[1]]$studia * szk$E2_nauka_kontyn[[1]]$n) >= progLiczebnosci) {
-  l_col <- length(szk$dyscypliny_zawody[[1]]) - 1
+if (round(szk$E2_nauka_kontyn[[1]]$Studia * szk$E2_nauka_kontyn[[1]]$n) >= progLiczebnosci) {
+  l_col <- length(szk$dyscypliny_zawody[[1]])
   if (length(szk$dyscypliny_zawody[[1]]) > 1 & l_col > 0) {
     cat(
       "W poniższej tabeli przedstawione zostały informacje o dyscyplinach, w których studiowali absolwenci Państwa szkoły, należący do poszczególnych grup (liczących co najmniej 10 osób) wyróżnionych ze względu na zawód, w którym się kształcili.")
     
     naz_wiersze_nag <- character()
-    for (i in 1:l_col) {
+    for (i in 3:l_col) {
       naz_wiersze_nag <- paste(
-        c(naz_wiersze_nag, paste(i, "-", names(szk$dyscypliny_zawody[[1]])[i + 1])),
+        c(naz_wiersze_nag, paste(i - 2, "-", names(szk$dyscypliny_zawody[[1]])[i])),
         collapse = "\n")
     }
-    wiersze_nag <- l_col
+    wiersze_nag <- l_col - 2
     names(wiersze_nag) <- paste0("% wśród studiujących absolwentów Państwa\nszkoły, którzy kształcili się w niej w zawodzie:\n", naz_wiersze_nag)
     
-    nagl <- rep(1, l_col, by = 1)
-    names(nagl) <- lapply(1:l_col, as.character)
+    nagl <- rep(1, l_col - 2, by = 1)
+    names(nagl) <- lapply(1:(l_col - 2), as.character)
     
     cat("\n\nTabela ",
         tab_num(),
@@ -848,14 +848,14 @@ if (round(szk$E2_nauka_kontyn[[1]]$studia * szk$E2_nauka_kontyn[[1]]$n) >= progL
         sep = "")
     
     # tu nie ma ograniczenia na max 10 dyscyplin, natomiast jest ograniczenie na liczbę zawodów
-    tab <- szk$dyscypliny_zawody[[1]] %>% 
+    tab <- szk$dyscypliny_zawody[[1]][-1] %>% 
       as_tibble() %>% 
       mutate(across(2:ncol(.),
                     ~paste0(round(. * 100), "\\%")))
     
     
-    tab$dyscyplina_wiodaca_kont <- unname(sapply(tab$dyscyplina_wiodaca_kont, wrapper, width = 50))
-    tab$dyscyplina_wiodaca_kont <- linebreak(tab$dyscyplina_wiodaca_kont, align = "l")
+    tab$kont <- unname(sapply(tab$kont, wrapper, width = 50))
+    tab$kont <- linebreak(tab$kont, align = "l")
     
     tab <- tab %>% 
       kable(format = "latex",
@@ -1509,7 +1509,7 @@ if (szk$l_abs[[1]] >= progLiczebnosci) {
             "mies",
             "Liczba miesięcy bezrobocia") +
     geom_text(data = tab_wyk,
-              aes(x = mies, y = value, label = lab, group = typ),
+              aes(x = mies, y = pct, label = lab, group = typ),
               nudge_y = 0.03,
               size = 2.5)
   
@@ -1517,7 +1517,7 @@ if (szk$l_abs[[1]] >= progLiczebnosci) {
   
   tab_wyk <- tab_wyk %>%
     select(-lab) %>% 
-    pivot_wider(names_from = mies) %>%
+    pivot_wider(names_from = mies, values_from = pct) %>%
     mutate(across(2:6,
                   ~ round(. * 100))) %>%
     mutate(across(2:6,
@@ -1673,10 +1673,12 @@ if (nrow(tabela) > 0) {
 
 ```{r}
 if (woj$l_abs[[1]] < progLiczebnosci | woj$E2_nauka_kontyn[[1]]$n < progLiczebnosci) {
-  tabelka_bez_brak <- god2$E2_nauka_kontyn[[1]][-1] %>% 
+  tabelka_bez_brak <- god2$E2_nauka_kontyn[[1]][-1]
+  tabelka_bez_brak["Brak kontynuacji nauki"] <- NULL
+
+  tabelka_bez_brak <- tabelka_bez_brak %>% 
     as_tibble() %>% 
     pivot_longer(everything()) %>% 
-    filter(!name %in% "brak") %>% 
     arrange(desc(value))
   
   tabelka <- rbind(
@@ -1684,16 +1686,16 @@ if (woj$l_abs[[1]] < progLiczebnosci | woj$E2_nauka_kontyn[[1]]$n < progLiczebno
     god2$E2_nauka_kontyn[[1]][-1] %>% 
       as_tibble() %>% 
       pivot_longer(everything()) %>% 
-      filter(name %in% "brak"))
+      filter(name %in% "Brak kontynuacji nauki"))
   
   tabelka$name <- factor(tabelka$name,
-                        levels = c("studia",
-                                   "spolic",
-                                   "kkz",
-                                   "lodd",
-                                   "bs2",
-                                   "kuz",
-                                   "brak"),
+                        levels = c("Studia",
+                                   "Szkoła policealna",
+                                   "KKZ",
+                                   "Liceum dla dorosłych",
+                                   "Branżowa szkoła II stopnia",
+                                   "KUZ",
+                                   "Brak kontynuacji nauki"),
                         labels = c("Studia",
                                    "Szkoła policealna",
                                    "Kwalifikacyjny Kurs Zawodowy (KKZ)",
@@ -1725,11 +1727,12 @@ if (woj$l_abs[[1]] < progLiczebnosci | woj$E2_nauka_kontyn[[1]]$n < progLiczebno
       woj$odmiany[[1]]$nazwa,
       "\n\n",
       sep = "")
-  
-  tabelka_bez_brak <- woj$E2_nauka_kontyn[[1]][-1] %>% 
+  tabelka_bez_brak <- woj$E2_nauka_kontyn[[1]][-1]
+  tabelka_bez_brak["Brak kontynuacji nauki"] <- NULL
+
+  tabelka_bez_brak <- tabelka_bez_brak %>% 
     as_tibble() %>% 
     pivot_longer(everything()) %>% 
-    filter(!name %in% "brak") %>% 
     arrange(desc(value))
   
   tabelka <- rbind(
@@ -1740,13 +1743,13 @@ if (woj$l_abs[[1]] < progLiczebnosci | woj$E2_nauka_kontyn[[1]]$n < progLiczebno
       filter(name %in% "brak"))
   
   tabelka$name <- factor(tabelka$name,
-                        levels = c("studia",
-                                   "spolic",
-                                   "kkz",
-                                   "lodd",
-                                   "bs2",
-                                   "kuz",
-                                   "brak"),
+                        levels = c("Studia",
+                                   "Szkoła policealna",
+                                   "KKZ",
+                                   "Liceum dla dorosłych",
+                                   "Branżowa szkoła II stopnia",
+                                   "KUZ",
+                                   "Brak kontynuacji nauki"),
                         labels = c("Studia",
                                    "Szkoła policealna",
                                    "Kwalifikacyjny Kurs Zawodowy (KKZ)",
@@ -1777,11 +1780,13 @@ if (woj$l_abs[[1]] < progLiczebnosci | woj$E2_nauka_kontyn[[1]]$n < progLiczebno
   cat("\n\nOdsetki mogą sumować się do więcej niż 100% ze względu na możliwość kontynuowania edukacji w więcej niż jednej formie.\n\n",
       "  b) cały kraj\n\n",
       sep = "")
-  
-  tabelka_bez_brak <- god2$E2_nauka_kontyn[[1]][-1] %>% 
+
+  tabelka_bez_brak <- god2$E2_nauka_kontyn[[1]][-1]
+  tabelka_bez_brak["Brak kontynuacji nauki"] <- NULL
+
+  tabelka_bez_brak <- tabelka_bez_brak %>% 
     as_tibble() %>% 
     pivot_longer(everything()) %>% 
-    filter(!name %in% "brak") %>% 
     arrange(desc(value))
   
   tabelka <- rbind(
@@ -1789,16 +1794,16 @@ if (woj$l_abs[[1]] < progLiczebnosci | woj$E2_nauka_kontyn[[1]]$n < progLiczebno
     god2$E2_nauka_kontyn[[1]][-1] %>% 
       as_tibble() %>% 
       pivot_longer(everything()) %>% 
-      filter(name %in% "brak"))
+      filter(name %in% "Brak kontynuacji nauki"))
   
   tabelka$name <- factor(tabelka$name,
-                        levels = c("studia",
-                                   "spolic",
-                                   "kkz",
-                                   "lodd",
-                                   "bs2",
-                                   "kuz",
-                                   "brak"),
+                        levels = c("Studia",
+                                   "Szkoła policealna",
+                                   "KKZ",
+                                   "Liceum dla dorosłych",
+                                   "Branżowa szkoła II stopnia",
+                                   "KUZ",
+                                   "Brak kontynuacji nauki"),
                         labels = c("Studia",
                                    "Szkoła policealna",
                                    "Kwalifikacyjny Kurs Zawodowy (KKZ)",
@@ -2079,12 +2084,12 @@ if (woj$l_abs[[1]] >= progLiczebnosci & woj$Z4_ucz[[1]]$n >= progLiczebnosci) {
 if (woj$l_abs[[1]] < progLiczebnosci | sum(woj$B2_bezrob[[1]]$n) < progLiczebnosci) {
   cat("Procentowy udział grup wyróżnionych ze względu na część okresu, w ciągu którego byli zarejestrowani jako bezrobotni, wśród absolwentów szkół policealnych z całego kraju.")
   
-  god2$B2_bezrob[[1]]$l_mies_bezrob[1] <- "0 (brak bezrobocia)"
+  # god2$B2_bezrob[[1]]$bezrobocie_r0_wrzgru[1] <- "0 (brak bezrobocia)"
   
   tabelka <- god2$B2_bezrob[[1]] %>% 
     as_tibble() %>% 
-    select(l_mies_bezrob, value) %>% 
-    mutate(across(value,
+    select(bezrobocie_r0_wrzgru, pct) %>% 
+    mutate(across(pct,
                   ~paste0(round(. * 100), "\\%"))) %>% 
     kable("latex", booktabs = TRUE, escape = FALSE, longtable = TRUE,
           linesep = "",
@@ -2107,12 +2112,12 @@ if (woj$l_abs[[1]] < progLiczebnosci | sum(woj$B2_bezrob[[1]]$n) < progLiczebnos
       ".\n\n",
       sep = "")
   
-  woj$B2_bezrob[[1]]$l_mies_bezrob[1] <- "0 (brak bezrobocia)"
+  # woj$B2_bezrob[[1]]$bezrobocie_r0_wrzgru[1] <- "0 (brak bezrobocia)"
   
   tabelka <- woj$B2_bezrob[[1]] %>% 
     as_tibble() %>% 
-    select(l_mies_bezrob, value) %>% 
-    mutate(across(value,
+    select(bezrobocie_r0_wrzgru, pct) %>% 
+    mutate(across(pct,
                   ~paste0(round(. * 100), "\\%"))) %>% 
     kable("latex", booktabs = TRUE, escape = FALSE, longtable = TRUE,
           linesep = "",
@@ -2130,12 +2135,12 @@ if (woj$l_abs[[1]] < progLiczebnosci | sum(woj$B2_bezrob[[1]]$n) < progLiczebnos
   
   cat("  b) cały kraj\n\nProcentowy udział grup wyróżnionych ze względu na część okresu, w ciągu którego byli zarejestrowani jako bezrobotni, wśród absolwentów szkół policealnych z całego kraju.")
   
-  god2$B2_bezrob[[1]]$l_mies_bezrob[1] <- "0 (brak bezrobocia)"
+  # god2$B2_bezrob[[1]]$bezrobocie_r0_wrzgru[1] <- "0 (brak bezrobocia)"
   
   tabelka <- god2$B2_bezrob[[1]] %>% 
     as_tibble() %>% 
-    select(l_mies_bezrob, value) %>% 
-    mutate(across(value,
+    select(bezrobocie_r0_wrzgru, pct) %>% 
+    mutate(across(pct,
                   ~paste0(round(. * 100), "\\%"))) %>% 
     kable("latex", booktabs = TRUE, escape = FALSE, longtable = TRUE,
           linesep = "",
